# CNPJ_CRAWLER

./: .gitignore  README.md  main.py  makefile  pyproject.toml
app/: main.py
app/crawler/: crawler_cnpj.py
app/crawler/conts/: __init__.py
app/crawler/utils/: __init__.py
app/models/: error.py  response_cnpj.py
app/routes/: __init__.py  cnpj.py
libs/: validators.py
scripts/: .dockerignore  Dockerfile  Procfile  build.sh  docker-compose.yaml  fly.toml  install.sh
