[tool.poetry]
name = "cnpj-crawler-search"
version = "1.0.0"
description = "Crawler para buscar CNPJ no site da Receita Federal"
authors = ["nicolas.mmb <nicolas.mmb@hotmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.265"
black = "^23.3.0"


[tool.poetry.group.prod.dependencies]
fastapi = "^0.95.1"
uvicorn = "^0.22.0"
playwright = "^1.33.0"
unidecode = "^1.3.6"
pydantic = { version = "^1.10.7", extras = ["dotenv"] }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
